--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -22,12 +22,9 @@
 
   <ion-buttons end>
     <button ion-button color="primary" (click)="sendComment(newCom)">Send comment</button>
+  </ion-buttons>
+  <ion-buttons end>
     <button ion-button color="primary" (click)="logout()">Logout</button>
   </ion-buttons>
 
-  <!-- <ion-list>
-    <ion-item *ngFor="let a of accidents | slice:0:3">
-      <h2>{{a}}</h2>
-    </ion-item>
-  </ion-list> -->
 </ion-content>
