--- a/src/pages/homeManager/homeManager.html
+++ b/src/pages/homeManager/homeManager.html
@@ -23,12 +23,12 @@
 
   <ion-buttons end>
     <button ion-button color="primary" (click)="sendComment(newCom)">Send comment</button>
+  </ion-buttons>
+  <!-- <ion-buttons end>
+    <button ion-button color="primary" (click)="deleteAccident(newCom)">Delete accident</button>
+  </ion-buttons> -->
+  <ion-buttons end>
     <button ion-button color="primary" (click)="logout()">Logout</button>
   </ion-buttons>
 
-  <!-- <ion-list>
-    <ion-item *ngFor="let a of accidents | slice:0:3">
-      <h2>{{a}}</h2>
-    </ion-item>
-  </ion-list> -->
 </ion-content>
